@@ -130,6 +130,7 @@ export(abbreviateTimeLabels,
        lonlat2utm,
        lonlat2map,
        lonFormat,
+       lowpass,
        magneticField,
        makeFilter,
        makeSection,
